# libsegfault

./: README.md  crash.cpp  libsegfault.cpp  meson.build  meson_options.txt  prepare.sh  stacktrace.sh
